Bug 1352070 - Part 1: In RDM, return the inner window size values of the RDM iframe when getting its outer size values via window.outerWidth/outerHeight r=smaug

Differential Revision: https://phabricator.services.mozilla.com/D32253